--- a/index.html
+++ b/index.html
@@ -1,12 +1,100 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>HTML Academy: Глейси</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header>
+      <nav>
+        <a>
+          <img src="https://via.placeholder.com/150x100" alt="Логотип магазина мороженого Глейси" />
+        </a>
+        <ul>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="">Доставка и оплата</a></li>
+          <li><a href="#company">О компании</a></li>
+        </ul>
+      </nav>
+      <div>
+        <a href="">Поиск</a>
+        <a href="">Вход</a>
+        <a href="">Пусто</a>
+      </div>
+    </header>
+    <main>
+      <section>
+        <h2 id="company">
+          Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого
+          собственного проиводства на развес
+        </h2>
+        <ul>
+          <li>
+            Все наше мороженое изготавливается на собственном производстве, с
+            использованием современного оборудования и проверенных временем
+            технологий.
+          </li>
+          <li>
+            Закупка ингредиентов производится только у проверенных фермерских
+            хозяйств и компаний, с которыми нас связывает долговременное
+            сотрудничество.
+          </li>
+          <li>
+            Для приготовления мороженого используются настоящие сливки и молоко
+            высочайшего качества. Все дополнительные ингредиенты и добавки
+            произведены из натурального, экологически чистого сырья.
+          </li>
+          <li>
+            Доставка нашего мороженного до заказчиков осуществляется в
+            специальном термопаке, который не дает мороженому растаять в пути и
+            позволяет сохранить превосходный вкус.
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Реклама</h2>
+        <article>
+          <p>Новое в нашем блоге</p>
+          <h3>10 способов сервировки фруктовых щербетов к столу</h3>
+        </article>
+      </section>
+      <section>
+        <h2>Подписка</h2>
+        <p>
+          Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего
+          самого вкусного, что у нас происходит. Обещаем не спамить и не слать
+          всякой ненужной ерунды. Честно =)
+        </p>
+        <form action="">
+          <input type="email" placeholder="email@example.com" />
+          <button type="submit">Отправить</button>
+        </form>
+      </section>
+    </main>
+    <footer>
+      <section>
+        <h2>Социальные сети</h2>
+        <ul>
+          <li><a href="">Фейсбук</a></li>
+          <li><a href="">Вконтакте</a></li>
+          <li><a href="">Инстраграмм</a></li>
+          <li><a href="">Твиттер</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Документация</h2>
+        <ul>
+          <li><a href="">Для поставщиков</a></li>
+          <li><a href="">Наши документы</a></li>
+          <li><a href="">О производстве</a></li>
+          <li><a href="">Экологические стандарты</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Логотип курсов</h2>
+        <a href=""> <img src="https://via.placeholder.com/150x100" alt="" /> Картинка логотипа</a>
+        <p>Сделано в HTML Academy © 2019</p>
+      </section>
+    </footer>
   </body>
 </html>
