add page layout

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,12 @@
     <header>
       <nav>
         <a>
-          <img src="https://via.placeholder.com/150x100" alt="Логотип магазина мороженого Глейси" />
+          <img
+            src="https://via.placeholder.com/150x100"
+            alt="Логотип магазина мороженого Глейси"
+            width=""
+            height=""
+          />
         </a>
         <ul>
           <li><a href="catalog.html">Каталог</a></li>
@@ -19,21 +24,84 @@
       <div>
         <a href="">Поиск</a>
         <a href="">Вход</a>
-        <a href="">Пусто</a>
+        <a href="">2 товара</a>
+      </div>
+      <div>
+        <a href="index.html">Главная</a>
+        <a href="">Каталог</a>
+        <a href="">Сливочное</a>
+      </div>
+      <div>
+        <p>С 10 до 20, ежедневно</p>
+        <a href="tel:88124502525">8 812 450-25-25</a>
       </div>
     </header>
     <main>
+      <h1>Cливочное мороженое</h1>
       <section>
-        <div>
-          <a href="index.html">Главная</a>
-          <a href="">Каталог</a>
-          <a href="">Сливочное</a>
-        </div>
-        <div>
-          <p>С 10 до 20, ежедневно</p>
-          <a href="tel:88124502525">8 812 450-25-25</a>
-        </div>
-        <h1>Cливочное мороженое</h1>
+        <form action="">
+          <fieldset>
+            <legend>Сортировка</legend>
+            <section>
+              <option>по популярности</option>
+              <option>сначала недорогие</option>
+              <option>сначала дорогие</option>
+              <option>по жирности</option>
+            </section>
+          </fieldset>
+          <fieldset>
+            <legend>
+              <span>Цена: 100 &#8381; - 500 &#8381;</span>
+            </legend>
+          </fieldset>
+          <fieldset>
+            <legend>Жирность</legend>
+            <ul>
+              <li>
+                <input type="radio" name="" id="" />
+                <label for="">0%</label>
+              </li>
+              <li>
+                <input type="radio" name="" id="" />
+                <label for="">до 10%</label>
+              </li>
+              <li>
+                <input type="radio" name="" id="" />
+                <label for="">до 30%</label>
+              </li>
+              <li>
+                <input type="radio" name="" id="" />
+                <label for="">выше 30%</label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset>
+            <legend>Наполнители:</legend>
+            <ul>
+              <li>
+                <input type="checkbox" name="" id="" />
+                <label for="">шоколадные</label>
+              </li>
+              <li>
+                <input type="checkbox" name="" id="" />
+                <label for="">сахарные присыпки</label>
+              </li>
+              <li>
+                <input type="checkbox" name="" id="" />
+                <label for="">фрукты</label>
+              </li>
+              <li>
+                <input type="checkbox" name="" id="" />
+                <label for="">сиропы</label>
+              </li>
+              <li>
+                <input type="checkbox" name="" id="" />
+                <label for="">джемы</label>
+              </li>
+            </ul>
+          </fieldset>
+          <button type="submit">Применить</button>
+        </form>
       </section>
       <section>
         <h2>Каталог сливочного мороженого</h2>
@@ -43,75 +111,98 @@
               <p>310 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
           <li>
             <div>
               <p>380 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочно-кофейное с кусочками шоколада</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
           <li>
             <div>
               <p>355 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
           <li>
             <div>
               <p>415 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочное крем-брюле с карамельной подливкой</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
           <li>
             <div>
               <p>325 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочное с брусничным джемом</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
           <li>
             <div>
               <p>410 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочно-черничное с цельными ягодами черники</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
           <li>
             <div>
               <p>315 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочно-лимонное с карамельной присыпкой</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
           <li>
             <div>
               <p>320 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочное с шоколадной стружкой</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
           <li>
             <div>
               <p>440 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочно-ванильное с кусочками шоколада</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
           <li>
             <div>
               <p>435 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочноe с ментоловым сиропом</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
           <li>
             <div>
               <p>355 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочное с кусочками черного шоколада</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
           <li>
             <div>
               <p>420 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочное с мятным сиропом</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
         </ul>
       </section>
+      <div>
+        <ul>
+          <li><a href="">Назад</a></li>
+          <li><a href="">1</a></li>
+          <li><a href="">2</a></li>
+          <li><a href="">3</a></li>
+          <li><a href="">4</a></li>
+          <li><a href="">5</a></li>
+          <li><a href="">Вперед</a></li>
+        </ul>
+      </div>
     </main>
     <footer>
       <section>
@@ -132,11 +223,22 @@
           <li><a href="">Экологические стандарты</a></li>
         </ul>
       </section>
-      <section>
-        <h2>Логотип курсов</h2>
-        <a href=""> <img src="https://via.placeholder.com/150x100" alt="" /> Картинка логотипа</a>
-        <p>Сделано в HTML Academy © 2019</p>
-      </section>
+      <article>
+        <h2>Разработчик</h2>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img
+            src="https://via.placeholder.com/150x100"
+            alt="Логотип HTML Academy"
+            width=""
+            height=""
+          />
+        </a>
+        <p>
+          Сделано в
+          <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+          © 2019
+        </p>
+      </article>
     </footer>
   </body>
 </html>
