--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
     <header>
       <nav>
         <a>
-          <img src="https://via.placeholder.com/150x100" alt="Логотип магазина мороженого Глейси" />
+          <img
+            src="https://via.placeholder.com/150x100"
+            alt="Логотип магазина мороженого Глейси"
+          />
         </a>
         <ul>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="">Доставка и оплата</a></li>
-          <li><a href="#company">О компании</a></li>
+          <li>
+            <a href="catalog.html">Каталог</a>
+          </li>
+          <li>
+            <a href="">Доставка и оплата</a>
+          </li>
+          <li>
+            <a href="#company">О компании</a>
+          </li>
         </ul>
       </nav>
       <div>
@@ -21,8 +30,78 @@
         <a href="">Вход</a>
         <a href="">Пусто</a>
       </div>
+      <div>
+        <p>С 10 до 20, ежедневно</p>
+        <a href="tel:88124502525">8 812 450-25-25</a>
+      </div>
     </header>
     <main>
+      <section>
+        <h2>Самое популярное мороженое</h2>
+        <ul>
+          <li>
+            <h3>Крем-брюле и пломбир с малиновым джемом</h3>
+            <a href="#">Давайте оба!</a>
+          </li>
+          <li>
+            <h3>Шоколадный пломбир и лимонный сорбет</h3>
+            <a href="#">Давайте оба!</a>
+          </li>
+          <li>
+            <h3>Пломбир с помадкой и клубничный щербет</h3>
+            <a href="#">Давайте оба!</a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>Малинка даром!</h3>
+        <p>
+          При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ
+          банку маринового варенья бесплатно.
+        </p>
+        <a href="#">Хочу варенье!</a>
+      </section>
+      <section>
+        <h3>Шоколадки даром!</h3>
+        <p>
+          При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей
+          шоколадной присыпки совершенно бесплатно.
+        </p>
+        <a href="#">Хочу шоколадки!</a>
+      </section>
+      <section>
+        <h2>Хиты продаж мороженого</h2>
+        <ul>
+          <li>
+            <div>
+              <p>Хит</p>
+              <p>310 &#8381; <span>/кг</span></p>
+            </div>
+            <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+          </li>
+          <li>
+            <div>
+              <p>Хит</p>
+              <p>380 &#8381; <span>/кг</span></p>
+            </div>
+            <h3>Сливочно-кофейное с кусочками шоколада</h3>
+          </li>
+          <li>
+            <div>
+              <p>Хит</p>
+              <p>355 &#8381; <span>/кг</span></p>
+            </div>
+            <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+          </li>
+          <li>
+            <div>
+              <p>Хит</p>
+              <p>415 &#8381; <span>/кг</span></p>
+            </div>
+            <h3>Сливочное крем-брюле с карамельной подливкой</h3>
+          </li>
+        </ul>
+      </section>
       <section>
         <h2 id="company">
           Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого
@@ -70,31 +149,71 @@
           <button type="submit">Отправить</button>
         </form>
       </section>
+      <section>
+        <h2>Где мы находимся?</h2>
+        <img src="https://via.placeholder.com/150x100" alt="Месторасположение магазина мороженного" width=" " height="">
+      </section>
+      <section>
+        <h2>Форма обратной связи</h2>
+        <p>Адрес главного офиса и офлайн-магазина:</p>
+        <a>ул. Большая Конюшенная, 19/8, Санкт-Петербург<a>
+          <p>Для заказов по телефону:</p>
+          <a href="tel:88124502525">8 812 450-25-25</a>
+          <p>(с 10 до 20 ежедневно)</p>
+          <a href="#">Форма обратной связи</a>
+      </section>
     </main>
     <footer>
       <section>
         <h2>Социальные сети</h2>
         <ul>
-          <li><a href="">Фейсбук</a></li>
-          <li><a href="">Вконтакте</a></li>
-          <li><a href="">Инстраграмм</a></li>
-          <li><a href="">Твиттер</a></li>
+          <li>
+            <a href="">Фейсбук</a>
+          </li>
+          <li>
+            <a href="">Вконтакте</a>
+          </li>
+          <li>
+            <a href="">Инстраграмм</a>
+          </li>
+          <li>
+            <a href="">Твиттер</a>
+          </li>
         </ul>
       </section>
       <section>
         <h2>Документация</h2>
         <ul>
-          <li><a href="">Для поставщиков</a></li>
-          <li><a href="">Наши документы</a></li>
-          <li><a href="">О производстве</a></li>
-          <li><a href="">Экологические стандарты</a></li>
+          <li>
+            <a href="">Для поставщиков</a>
+          </li>
+          <li>
+            <a href="">Наши документы</a>
+          </li>
+          <li>
+            <a href="">О производстве</a>
+          </li>
+          <li>
+            <a href="">Экологические стандарты</a>
+          </li>
         </ul>
       </section>
-      <section>
-        <h2>Логотип курсов</h2>
-        <a href=""> <img src="https://via.placeholder.com/150x100" alt="" /> Картинка логотипа</a>
-        <p>Сделано в HTML Academy © 2019</p>
-      </section>
+      <article>
+        <h2>Разработчик</h2>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img
+            src="https://via.placeholder.com/150x100"
+            alt="Логотип HTML Academy"
+            width=""
+            height=""
+          />
+        </a>
+        <p>
+          Сделано в
+          <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+          © 2019
+        </p>
+      </article>
     </footer>
   </body>
 </html>
