add some changes

--- a/index.html
+++ b/index.html
@@ -38,20 +38,25 @@
     <main>
       <section>
         <h2>Самое популярное мороженое</h2>
-        <ul>
-          <li>
+        <div>
+          <div>
             <h3>Крем-брюле и пломбир с малиновым джемом</h3>
             <a href="#">Давайте оба!</a>
-          </li>
-          <li>
+          </div>
+          <div>
             <h3>Шоколадный пломбир и лимонный сорбет</h3>
             <a href="#">Давайте оба!</a>
-          </li>
-          <li>
+          </div>
+          <div>
             <h3>Пломбир с помадкой и клубничный щербет</h3>
             <a href="#">Давайте оба!</a>
-          </li>
-        </ul>
+          </div>
+          <ul>
+            <li><button>Слайдер 1</button></li>
+            <li><button>Слайдер 2</button></li>
+            <li><button>Слайдер 3</button></li>
+          </ul>
+        </div>
       </section>
       <section>
         <h3>Малинка даром!</h3>
@@ -78,6 +83,7 @@
               <p>310 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
           <li>
             <div>
@@ -85,6 +91,7 @@
               <p>380 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочно-кофейное с кусочками шоколада</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
           <li>
             <div>
@@ -92,6 +99,7 @@
               <p>355 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
           <li>
             <div>
@@ -99,6 +107,7 @@
               <p>415 &#8381; <span>/кг</span></p>
             </div>
             <h3>Сливочное крем-брюле с карамельной подливкой</h3>
+            <a href="#">Быстрый просмотр</a>
           </li>
         </ul>
       </section>
@@ -152,50 +161,34 @@
       <section>
         <h2>Где мы находимся?</h2>
         <img src="https://via.placeholder.com/150x100" alt="Месторасположение магазина мороженного" width=" " height="">
-      </section>
-      <section>
-        <h2>Форма обратной связи</h2>
-        <p>Адрес главного офиса и офлайн-магазина:</p>
-        <a>ул. Большая Конюшенная, 19/8, Санкт-Петербург<a>
-          <p>Для заказов по телефону:</p>
-          <a href="tel:88124502525">8 812 450-25-25</a>
-          <p>(с 10 до 20 ежедневно)</p>
-          <a href="#">Форма обратной связи</a>
+        <div>
+          <h2>Форма обратной связи</h2>
+          <p>Адрес главного офиса и офлайн-магазина:</p>
+          <a>ул. Большая Конюшенная, 19/8, Санкт-Петербург<a>
+            <p>Для заказов по телефону:</p>
+            <a href="tel:88124502525">8 812 450-25-25</a>
+            <p>(с 10 до 20 ежедневно)</p>
+            <a href="#">Форма обратной связи</a>
+          </div>>
       </section>
     </main>
     <footer>
       <section>
         <h2>Социальные сети</h2>
         <ul>
-          <li>
-            <a href="">Фейсбук</a>
-          </li>
-          <li>
-            <a href="">Вконтакте</a>
-          </li>
-          <li>
-            <a href="">Инстраграмм</a>
-          </li>
-          <li>
-            <a href="">Твиттер</a>
-          </li>
+          <li><a href="">Facebook</a></li>
+          <li><a href="">VK</a></li>
+          <li><a href="">Instagram</a></li>
+          <li><a href="">Twitter</a></li>
         </ul>
       </section>
       <section>
         <h2>Документация</h2>
         <ul>
-          <li>
-            <a href="">Для поставщиков</a>
-          </li>
-          <li>
-            <a href="">Наши документы</a>
-          </li>
-          <li>
-            <a href="">О производстве</a>
-          </li>
-          <li>
-            <a href="">Экологические стандарты</a>
-          </li>
+          <li><a href="">Для поставщиков</a></li>
+          <li><a href="">Наши документы</a></li>
+          <li><a href="">О производстве</a></li>
+          <li><a href="">Экологические стандарты</a></li>
         </ul>
       </section>
       <article>
