--- a/catalog.html
+++ b/catalog.html
@@ -208,10 +208,10 @@
       <section>
         <h2>Социальные сети</h2>
         <ul>
-          <li><a href="">Фейсбук</a></li>
-          <li><a href="">Вконтакте</a></li>
-          <li><a href="">Инстраграмм</a></li>
-          <li><a href="">Твиттер</a></li>
+          <li><a href="">Facebook</a></li>
+          <li><a href="">VK</a></li>
+          <li><a href="">Instagram</a></li>
+          <li><a href="">Twitter</a></li>
         </ul>
       </section>
       <section>
