Add graphics to sections

--- a/catalog.html
+++ b/catalog.html
@@ -9,10 +9,10 @@
       <nav>
         <a>
           <img
-            src="https://via.placeholder.com/150x100"
+            src="img/header/logo.svg"
             alt="Логотип магазина мороженого Глейси"
-            width=""
-            height=""
+            width="154"
+            height="64"
           />
         </a>
         <ul>
@@ -227,10 +227,11 @@
         <h2>Разработчик</h2>
         <a href="https://htmlacademy.ru/intensive/htmlcss">
           <img
-            src="https://via.placeholder.com/150x100"
+            src="img/header/logo.svg"
             alt="Логотип HTML Academy"
-            width=""
-            height=""
+            width="108"
+            height="39"
+          />
           />
         </a>
         <p>
