--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
       <nav>
         <a>
           <img
-            src="https://via.placeholder.com/150x100"
+            src="img/header/logo.svg"
             alt="Логотип магазина мороженого Глейси"
+            width="154"
+            height="64"
           />
         </a>
         <ul>
@@ -52,9 +54,9 @@
             <a href="#">Давайте оба!</a>
           </div>
           <ul>
-            <li><button>Слайдер 1</button></li>
-            <li><button>Слайдер 2</button></li>
-            <li><button>Слайдер 3</button></li>
+            <li><button>Слайд 1</button></li>
+            <li><button>Слайд 2</button></li>
+            <li><button>Слайд 3</button></li>
           </ul>
         </div>
       </section>
@@ -169,7 +171,7 @@
             <a href="tel:88124502525">8 812 450-25-25</a>
             <p>(с 10 до 20 ежедневно)</p>
             <a href="#">Форма обратной связи</a>
-          </div>>
+          </div>
       </section>
     </main>
     <footer>
@@ -193,12 +195,12 @@
       </section>
       <article>
         <h2>Разработчик</h2>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">
+        <a href="">
           <img
-            src="https://via.placeholder.com/150x100"
+            src="img/header/logo.svg"
             alt="Логотип HTML Academy"
-            width=""
-            height=""
+            width="108"
+            height="39"
           />
         </a>
         <p>
