Add graphics to main section

--- a/catalog.html
+++ b/catalog.html
@@ -227,7 +227,7 @@
         <h2>Разработчик</h2>
         <a href="https://htmlacademy.ru/intensive/htmlcss">
           <img
-            src="img/header/logo.svg"
+            src="img/footer/logo-academy.svg"
             alt="Логотип HTML Academy"
             width="108"
             height="39"
