--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <h2>Разработчик</h2>
         <a href="">
           <img
-            src="img/header/logo.svg"
+            src="img/footer/logo-academy.svg"
             alt="Логотип HTML Academy"
             width="108"
             height="39"
