Changes by comments

--- a/catalog.html
+++ b/catalog.html
@@ -41,51 +41,49 @@
     </nav>
     <div>
       <a href="#">
-        <form action="https://echo.htmlacademy.ru/courses" method="post">
-          <label for="search">Строка поиска</label>
-          <input type="search" name="search" id="search" placeholder="Что ищем?" />
-        </form>
       </a>
+      <form action="https://echo.htmlacademy.ru/courses" method="post">
+        <label for="search">Строка поиска</label>
+        <input type="search" name="search" id="search" placeholder="Что ищем?" />
+      </form>
       <a href="#"> Вход
-        <form action="https://echo.htmlacademy.ru/courses" method="post">
-          <label for="email"></label>
-          <input type="email" id="email" name="email" required />
-          <label for="password"></label>
-          <input type="password" id="password" name="password" placeholder="Пароль" />
-          <div class="button">
-            <input type="submit" value="Войти" />
-          </div>
-          <a href="#"> Забыли пароль? </a>
-          <a href="#"> Новая регистрация </a>
-        </form>
       </a>
+      <form action="https://echo.htmlacademy.ru/courses" method="post">
+        <label for="email"></label>
+        <input type="email" id="email" name="email" required />
+        <label for="password"></label>
+        <input type="password" id="password" name="password" placeholder="Пароль" />
+        <div class="button">
+          <input type="submit" value="Войти" />
+        </div>
+        <a href="#"> Забыли пароль? </a>
+        <a href="#"> Новая регистрация </a>
+      </form>
       <a href="#">2 товара
         <ul>
-          <h2 class="visually-hidden">Корзина с мороженым</h2>
           <li>
-            <button></button>
+            <h2 class="visually-hidden">Корзина с мороженым</h2>
+            <button><span class="visually-hidden">Удалить товар <span></button>
             <a href="#">
               <img src="img/main/products/ic-orange.png" alt="Картинка мороженого пломбир с апкльсиновым джемом"
                 width="32" height="32" />
-              <h3 class="">Пломбир с апельсиновым джемом</h3>
-              <span>1,5 кг x <b>200 руб</b></span>
-              <span>300 руб</span>
             </a>
+            <h3 class="">Пломбир с апельсиновым джемом</h3>
+            <span>1,5 кг x <span>200 руб.</span></span>
+            <span>300 руб.</span>
           </li>
           <li>
-            <button></button>
+            <button><span class="visually-hidden">Удалить товар </span></button>
             <a href="#">
               <img src="img/main/products/ic-strawberry.png"
                 alt="Картинка мороженого клубничный пломбир с присыпкой из белого шоколада" width="32" height="32" />
-              <h3>Клубничный пломбир с присыпкой из белого шоколада</h3>
-              <span>1,5 кг x <b>200 руб</b></span>
-              <span>300 руб</span>
             </a>
-          </li>
-          <li>
-            <span>Итого: 750 руб</span>
+            <h3>Клубничный пломбир с присыпкой из белого шоколада</h3>
+            <span>1,5 кг x <span>200 руб.</span></span>
+            <span>300 руб.</span>
           </li>
         </ul>
+        <span>Итого: 750 руб.</span>
       </a>
       <button type="submit">Оформить заказ</button>
     </div>
