--- a/index.html
+++ b/index.html
@@ -14,7 +14,26 @@
       </a>
       <ul>
         <li>
-          <a href="catalog.html">Каталог</a>
+          <a href="catalog.html">
+            Каталог
+            <ul>
+              <li>
+                <a href="#">Новинки</a>
+              </li>
+              <li>
+                <a href="#">Сливочное</a>
+              </li>
+              <li>
+                <a href="#">Щербеты</a>
+              </li>
+              <li>
+                <a href="#">Фруктовый лед</a>
+              </li>
+              <li>
+                <a href="#">Мелорин</a>
+              </li>
+            </ul>
+          </a>
         </li>
         <li>
           <a href="#">Доставка и оплата</a>
@@ -26,30 +45,27 @@
     </nav>
     <div>
       <div>
-        <a>
-          <form action="https://echo.htmlacademy.ru/courses" method="post">
-            <label for="search">Строка поиска</label>
-            <input type="search" name="search" id="search" placeholder="Что ищем?">
-          </form>
+        <a href="#">
         </a>
+        <form action="https://echo.htmlacademy.ru/courses" method="post">
+          <label for="search">Строка поиска</label>
+          <input type="search" name="search" id="search" placeholder="Что ищем?">
+        </form>
       </div>
       <div>
         <a href="#">
-          Вход
-          <form action="https://echo.htmlacademy.ru/courses" method="post">
-            <label for="email"></label>
-            <input type="email" id="email" name="email" required>
-            <label for="password"></label>
-            <input type="password" id="password" name="password" placeholder="Пароль">
-            <div class="button">
-              <input type="submit" value="Войти">
-            </div>
-            <a href="#"> Забыли пароль?</a>
-            <a href="#"> Новая регистрация</a>
-          </form>
-        </a>
+          Вход </a>
+        <form action="https://echo.htmlacademy.ru/courses" method="post">
+          <label for="email"></label>
+          <input type="email" id="email" name="email" required>
+          <label for="password"></label>
+          <input type="password" id="password" name="password" placeholder="Пароль">
+          <button type="submit" value="Войти"> </button>>
+          <a href="#"> Забыли пароль?</a>
+          <a href="#"> Новая регистрация</a>
+        </form>
       </div>
-      <a href="#">Пусто</a>
+      <a href="#">Корзина</a>
     </div>
     <div>
       <p>С 10 до 20, ежедневно</p>
@@ -74,13 +90,13 @@
         </div>
         <ul>
           <li>
-            <button>Слайд 1</button>
+            <button> <span class="visually-hidden">Слайд 1</span></button>
           </li>
           <li>
-            <button>Слайд 2</button>
+            <button> <span class="visually-hidden">Слайд 2</span></button>
           </li>
           <li>
-            <button>Слайд 3</button>
+            <button><span class="visually-hidden">Слайд 3</span></button>
           </li>
         </ul>
       </div>
