Change by comments

--- a/catalog.html
+++ b/catalog.html
@@ -14,8 +14,7 @@
       </a>
       <ul>
         <li>
-          <a href="catalog.html"></a>
-          Каталог
+          <a href="catalog.html">Каталог</a>
           <ul>
             <li>
               <a href="#">Новинки</a>
@@ -38,10 +37,9 @@
         <li><a href="#">О компании</a></li>
       </ul>
     </nav>
-
     <section>
       <h2 class="visually-hidden">Форма поиска</h2>
-      <a href="#"></a>
+      <a href="#"><span class="visually-hidden">Поиск</span></a>
       <form action="https://echo.htmlacademy.ru/courses" method="post">
         <label for="search" class="visually-hidden">Строка поиска</label>
         <input type="search" name="search" id="search" placeholder="Что ищем?" />
@@ -55,9 +53,7 @@
         <input type="email" id="email" name="email" required />
         <label for="password" class="visually-hidden"> Строка ввода пароля</label>
         <input type="password" id="password" name="password" placeholder="Пароль" required />
-        <div class="button">
-          <input type="submit" value="Войти" />
-        </div>
+        <button type="submit">Войти</button>
         <a href="#"> Забыли пароль? </a>
         <a href="#"> Новая регистрация </a>
       </form>
@@ -67,8 +63,8 @@
       <a href="#">2 товара</a>
       <form action="https://echo.htmlacademy.ru/courses" method="post">
         <ul>
+          <h2 class="visually-hidden">Корзина с мороженым</h2>
           <li>
-            <h2 class="visually-hidden">Корзина с мороженым</h2>
             <button><span class="visually-hidden">Удалить товар </span></button>
             <a href="#">
               <img src="img/main/products/ic-orange.png" alt="Картинка мороженого пломбир с апкльсиновым джемом"
@@ -98,10 +94,11 @@
       <a href="catalog.html">Каталог</a>
       <a href="">Сливочное</a>
     </div>
-    <div>
+    <section>
+      <h2 class="visually-hidden">Режим работы</h2>
       <p>С 10 до 20, ежедневно</p>
       <a href="tel:88124502525">8 812 450-25-25</a>
-    </div>
+    </section>
   </header>
   <main>
     <h1>Cливочное мороженое</h1>
