--- a/index.html
+++ b/index.html
@@ -14,26 +14,24 @@
       </a>
       <ul>
         <li>
-          <a href="catalog.html">
-            Каталог
-            <ul>
-              <li>
-                <a href="#">Новинки</a>
-              </li>
-              <li>
-                <a href="#">Сливочное</a>
-              </li>
-              <li>
-                <a href="#">Щербеты</a>
-              </li>
-              <li>
-                <a href="#">Фруктовый лед</a>
-              </li>
-              <li>
-                <a href="#">Мелорин</a>
-              </li>
-            </ul>
-          </a>
+          <a href="catalog.html"> Каталог</a>
+          <ul>
+            <li>
+              <a href="#">Новинки</a>
+            </li>
+            <li>
+              <a href="#">Сливочное</a>
+            </li>
+            <li>
+              <a href="#">Щербеты</a>
+            </li>
+            <li>
+              <a href="#">Фруктовый лед</a>
+            </li>
+            <li>
+              <a href="#">Мелорин</a>
+            </li>
+          </ul>
         </li>
         <li>
           <a href="#">Доставка и оплата</a>
@@ -43,32 +41,36 @@
         </li>
       </ul>
     </nav>
-    <div>
-      <div>
-        <a href="#"></a>
-        <form action="https://echo.htmlacademy.ru/courses" method="post">
-          <label for="search" class="visually-hidden">Строка поиска</label>
-          <input type="search" name="search" id="search" placeholder="Что ищем?">
-        </form>
-      </div>
-      <div>
-        <a href="#">Вход</a>
-        <form action="https://echo.htmlacademy.ru/courses" method="post">
-          <label for="email" class="visually-hidden"> Строка ввода почты</label>
-          <input type="email" id="email" name="email" required>
-          <label for="password" class="visually-hidden">Строка ввода пароля</label>
-          <input type="password" id="password" name="password" placeholder="Пароль" required>
-          <button type="submit" value="Войти"> </button>>
-          <a href="#"> Забыли пароль?</a>
-          <a href="#"> Новая регистрация</a>
-        </form>
-      </div>
-      <a href="#">Корзина</a>
-    </div>
-    <div>
+    <section>
+      <h2 class="visually-hidden">Форма поиска</h2>
+      <a href="#"><span class="visually-hidden">Поиск</span></a>
+      <form action="https://echo.htmlacademy.ru/courses" method="post">
+        <label for="search" class="visually-hidden">Строка поиска</label>
+        <input type="search" name="search" id="search" placeholder="Что ищем?" />
+      </form>
+    </section>
+    <section>
+      <h2 class="visually-hidden">Форма входа</h2>
+      <a href="#"> Вход</a>
+      <form action="https://echo.htmlacademy.ru/courses" method="post">
+        <label for="email" class="visually-hidden">Строка ввода почты</label>
+        <input type="email" id="email" name="email" required />
+        <label for="password" class="visually-hidden"> Строка ввода пароля</label>
+        <input type="password" id="password" name="password" placeholder="Пароль" required />
+        <button type="submit">Войти</button>
+        <a href="#"> Забыли пароль? </a>
+        <a href="#"> Новая регистрация </a>
+      </form>
+    </section>
+    <section>
+      <h2 class="visually-hidden">Форма для оформления заказа</h2>
+      <a href="#"><span class="visually-hidden">Корзина</span></a>
+    </section>
+    <section>
+      <h2 class="visually-hidden">Режим работы</h2>
       <p>С 10 до 20, ежедневно</p>
       <a href="tel:88124502525">8 812 450-25-25</a>
-    </div>
+    </section>
   </header>
   <main>
     <section>
@@ -215,12 +217,11 @@
       <div>
         <h2 class="visually-hidden">Наш адрес</h2>
         <p>Адрес главного офиса и офлайн-магазина:</p>
-        <a>ул. Большая Конюшенная, 19/8, Санкт-Петербург
-          <a>
-            <p>Для заказов по телефону:</p>
-            <a href="tel:88124502525">8 812 450-25-25</a>
-            <p>(с 10 до 20 ежедневно)</p>
-            <a href="#">Форма обратной связи</a>
+        <a>ул. Большая Конюшенная, 19/8, Санкт-Петербург</a>
+        <p>Для заказов по телефону:</p>
+        <a href="tel:88124502525">8 812 450-25-25</a>
+        <p>(с 10 до 20 ежедневно)</p>
+        <a href="#">Форма обратной связи</a>
       </div>
     </section>
   </main>
@@ -274,11 +275,11 @@
   <form action="https://echo.htmlacademy.ru/courses" method="post">
     <h2 class="visually-hidden"> Форма обратной связи </h2>
     <h3>Мы обязательно вам ответим!</h3>
-    <label for="name" class="visually-hidden"> Строка ввода имени и фамилии</label>
+    <label for="name" class="visually-hidden"> Имя и фамилия</label>
     <input type="text" name="name" id="name" placeholder="Имя Фамилия" required>
-    <label for="email" class="visually-hidden">Строка ввода почты</label>
+    <label for="email" class="visually-hidden">Электронная почта</label>
     <input type="email" id="email" name="email" placeholder="email@example.com" required>
-    <label for="text" class="visually-hidden">Поле для заполнения дополнительной информации</label>
+    <label for="text" class="visually-hidden">Дополнительная информация</label>
     <textarea id="text" name="text" rows="7" placeholder="В свободной форме" required></textarea>
     <button type="submit">Отправить</button>
   </form>
