--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <title>HTML Academy: Глейси</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -62,8 +65,8 @@
       <h2 class="visually-hidden">Форма для оформления заказа</h2>
       <a href="#">2 товара</a>
       <form action="https://echo.htmlacademy.ru/courses" method="post">
+        <h2 class="visually-hidden">Корзина с мороженым</h2>
         <ul>
-          <h2 class="visually-hidden">Корзина с мороженым</h2>
           <li>
             <button><span class="visually-hidden">Удалить товар </span></button>
             <a href="#">
