--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
           </div>
         </div>
       </form>
-      
+
     </section>
 
-    <section class="form-order">
+    <section class="form-order-basket">
       <h2 class="visually-hidden">Форма для оформления заказа</h2>
       <a class="btn-basket" href="#">
         <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
