--- a/catalog.html
+++ b/catalog.html
@@ -127,7 +127,7 @@
         <button class="button btn-checkout" type="submit">Оформить заказ</button>
       </form>
     </section>
-
+</div>
   </header>
   <main>
     <div class="shop-info container">
